changed to soundcloud and map

--- a/index.html
+++ b/index.html
@@ -1,11 +1,159 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<h1>My Website</h1>
-	</head>
-	<body>
-		<h2>Hello, my  name is Michelle.</h2>
-		<div>This class.</div>
-		<h3>More code</h3>
-	</body>
+  <head>
+    <title>Simple styled maps</title>
+    <style>
+      html, body {
+        height: 100%;
+        margin: 0px;
+        padding: 0px
+      }
+      #map-canvas {
+      	height: 100%;
+      	position: fixed;
+      	top: 0;
+      	bottom: 0;
+      	left: 0;
+      	right: 0;
+      	z-index: 0;
+      }
+    </style>
+ 	<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+ 	<!--SOUND CLOUD STARTS HERE-->
+  	<script type="text/javascript" src="http://connect.soundcloud.com/sdk.js"></script>
+	<script>
+	$(document).ready(function() {
+
+        SC.initialize({
+  		client_id: 'd58ccfcabb9df6603086be7f94396604'
+  		});//closes SC.initialize
+		SC.stream("/tracks/127337725", {
+	  	autoPlay: true,
+	  	ontimedcomments: function(comments){
+	    //console.log(comments[0]);
+
+	    var user_id = comments[0].user_id;
+	    SC.get('/users/'+user_id, {"limit":1}, function(response){
+	    	var city = response.city;
+	    	//console.log(comments[0].body,city)
+
+		     $(document).ready(function () {
+
+		        $.getJSON("https://maps.googleapis.com/maps/api/geocode/json?address="+city+"&key=AIzaSyBcF_5owxQkfJi3gkZgzngaikp1zWq9hoY", function(response){
+
+		            for(var i=0; i<response.length; i++) {
+		        	var latitude = response.results[0].geometry.location.lat;
+		        	var longitude = response.results[0].geometry.location.lng;
+					console.log(latitude,longitude)				    	
+					//addMarkerToMap(city)
+					var marker = new google.maps.Marker({
+					      position: (latitude,longitude),
+					      map: map,
+					      title: 'Hello World!'
+					  });//closes google maps marker 
+		            }; //closesfor
+		        })//closes getJSON
+
+          });//closes readyfunction
+  
+	    })//closes SC.get response city
+	  }//closes ontimedcomments
+	});//closes stream
+	SC.stream("/tracks/127337725", function(sound){
+		sound.play();
+	  });
+	});//closes readyfunction
+	</script>
+
+	<!--SOUND CLOUD ENDS-->
+	<!--GOOGLE MAPS BEGIN-->
+
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
+    <script>
+	var map;
+	var usa = new google.maps.LatLng(37.6,-95.665);
+
+	var MY_MAPTYPE_ID = 'custom_style';
+
+	function initialize() {
+
+	  var featureOpts = [
+	    {
+	      stylers: [
+	        { visibility: 'simplified' },
+	        { gamma: 0.25 },
+	        { weight: 0.25 },
+	        { color: '#C8C8DA' },
+	        { lightness: 50 },
+	      ]
+	    },
+	    {
+	      elementType: 'labels',
+	      stylers: [
+	        { visibility: 'off' }
+	      ]
+	    },
+	    {
+	      featureType: 'road.local',
+	      stylers: [
+	        { visibility: 'off' }
+	      ]
+	    },
+	    {
+	      featureType: 'water',
+	      stylers: [
+	        { color: '#69696B' }
+	      ]
+	    }
+	  ];
+
+	  var mapOptions = {
+	    zoom: 4,
+	    center: usa,
+	    mapTypeControlOptions: {
+	      mapTypeIds: [google.maps.MapTypeId.ROADMAP, MY_MAPTYPE_ID]
+	    },
+	    mapTypeId: MY_MAPTYPE_ID
+	  };
+
+	  map = new google.maps.Map(document.getElementById('map-canvas'),
+	      mapOptions);
+
+
+
+
+
+
+	  var styledMapOptions = {
+	    name: 'Custom Style'
+	  };
+
+	  var customMapType = new google.maps.StyledMapType(featureOpts, styledMapOptions);
+
+	  map.mapTypes.set(MY_MAPTYPE_ID, customMapType);
+	}
+
+	google.maps.event.addDomListener(window, 'load', initialize);
+
+    </script>
+  	</head>
+  	<body>
+    <div id="map-canvas"></div>
+  </body>
 </html>
+
+
+
+
+<!--objective: get comment users' city, tag it on the map real-time with music
+	might need this site for geocoding cities: 
+
+	https://developers.google.com/maps/documentation/geocoding/#Geocoding
+
+	API KEY: AIzaSyBcF_5owxQkfJi3gkZgzngaikp1zWq9hoY
+
+	for example: https://maps.googleapis.com/maps/api/geocode/json?address=Berlin&key=AIzaSyBcF_5owxQkfJi3gkZgzngaikp1zWq9hoY
+
+	or this might be helpful: https://developers.google.com/maps/documentation/javascript/examples/geocoding-simple
+-->
+
